# TH-RAG

./: .env.example  .gitignore  NaiveRAG.py  README.md  Retriever copy.py  Retriever.py  Retriever_v1.py  Retriever_v2.py  Retriever_v3.py  Retriever_v4.py  Retriever_v5.py  SETUP_GUIDE.md  answer_generation copy.py  answer_generation.py  answer_generation_long.py  answer_generation_options.py  answer_generation_short.py  answer_generation_time.py  config.py  edge_embedding.py  edge_topic.py  edge_topic_rag.py  extract_graph.py  final_cleanup.py  find_korean.py  gemini_test.py  graph.json  graph_based_rag.py  graph_based_rag_chunks.py  graph_based_rag_copy.py  graph_based_rag_long.py  graph_based_rag_short.py  graph_construction copy.py  graph_construction.py  graph_to_csv.py  graph_v6.gexf  json_to_gexf.py  json_to_gexf_lightrag.py  json_to_gexf_v2.py  json_to_gml.py  (+54 more)
InfiniteQA/: context_preprocess.py  edge_payloads_v1.npy  qa_preprocess.py  unique_contexts.txt
MultihopRAG/: context_process.py  qa_process.py  qa_sample.py
evaluate/: __init__.py  evaluate_answers.bat  evaluate_answers.sh  judge_F1.py  judge_Ultradomain.py
generate/: Retriever.py  __init__.py  answer_generation_long.py  answer_generation_short.py  generate_answers.bat  generate_answers.sh  graph_based_rag_long.py  graph_based_rag_short.py  graph_rag.py
index/: __init__.py  build_graph.py  build_index.bat  build_index.sh  edge_embedding.py  graph_construction.py  json_to_gexf.py  subtopic_choice.py  topic_choice.py
prompt/: accuracy_evaluation.py  answer.py  answer_generation.py  answer_short.py  (+13 more)
(+7 files in other folders)
